[package]
name = "rust-xgboost-bindgen"
version = "0.1.0"
edition = "2021"
links = "xgboost"

[lib]
doctest = false

[features]
default = []
# polars = ["dep:polars"]
turing = ["cuda"]
cuda = []


[dependencies]
libc = "0.2"
# ndarray = "0.16"
# polars = { version = "0.46", features = ["ndarray"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

[dev-dependencies]
csv = "1.3"
tracing-subscriber = "0.3"

[build-dependencies]
bindgen = "0.71"
cmake = "0.1"
